--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form action="action_page.php">
+<form (ngSubmit)="onSignin(emailSingin.value, passwordSingin.value)">
   <div class="container">
     <h1>Login</h1>
     <p>Zadejte své údaje pro přihlášení</p>
@@ -11,7 +11,7 @@
     <input type="password" #passwordSingin placeholder="Heslo" name="psw" id="psw" required>
     <hr>
 
-    <button (click)="onSignin(emailSingin.value, passwordSingin.value)" type="submit" class="loginbtn">Přihlásit se</button>
+    <button type="submit" class="loginbtn">Přihlásit se</button>
   </div>
 
   <div class="container signin">
