--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSignup(emailSingup.value, passwordSingup.value)">
+<form (ngSubmit)="onSignup(emailSingup.value, passwordSingup.value, passwordSingup2.value)">
   <div class="container">
     <h1>Registrace</h1>
     <p>Vyplňte údaje pro registraci.</p>
@@ -11,7 +11,7 @@
     <input type="password" #passwordSingup placeholder="Heslo" name="psw" id="psw" required>
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" #passwordSingup2 placeholder="Potvrdit heslo" name="psw-repeat" id="psw-repeat" required>
+    <input  type="password" #passwordSingup2 placeholder="Potvrdit heslo" name="psw-repeat" id="psw-repeat" required>
     <hr>
 
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
