--- a/src/app/vytvoreniTematu/vytvoreni-tematu.component.html
+++ b/src/app/vytvoreniTematu/vytvoreni-tematu.component.html
@@ -1,23 +1,13 @@
 <div class="container">
-  <form>
+  <form (ngSubmit)="vytvoritTema(nadpis.value, obsah.value)">
 
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="lname">Nadpis tématu</label>
+    <input #nadpis type="text" id="lname" name="lastname" placeholder="Nadpis tématu ..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="subject">Váš dotaz</label>
+    <textarea #obsah id="subject" name="subject" placeholder="Text .." style="height:200px"></textarea>
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
+    <input type="submit" value="Vytvořit téma">
 
   </form>
 </div>
