--- a/src/app/vytvoreniTematu/vytvoreni-tematu.component.scss
+++ b/src/app/vytvoreniTematu/vytvoreni-tematu.component.scss
@@ -26,6 +26,8 @@ input[type=submit]:hover {
 
 /* Add a background color and some padding around the form */
 .container {
+  margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
