--- a/src/app/clanky/clanky.component.html
+++ b/src/app/clanky/clanky.component.html
@@ -1,1 +1,8 @@
-<p>clanky works!</p>
+<div *ngFor="let clanek of clanky">
+  <div>
+    {{ clanek.Nadpis }}
+  </div>
+  <div>
+  {{ clanek.Obsah }}
+  </div>
+</div>
