--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,10 +7,13 @@
     <label for="email"><b>Email</b></label>
     <input type="text" #emailSingup placeholder="Email" name="email" id="email" required>
 
-    <label for="psw"><b>Password</b></label>
+    <label for="email"><b>Uživatelské jméno</b></label>
+    <input type="text" #emailSingup placeholder="Email" name="email" id="username" required>
+
+    <label for="psw"><b>Heslo</b></label>
     <input type="password" #passwordSingup placeholder="Heslo" name="psw" id="psw" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <label for="psw-repeat"><b>Ověření hesla</b></label>
     <input  type="password" #passwordSingup2 placeholder="Potvrdit heslo" name="psw-repeat" id="psw-repeat" required>
     <hr>
 
