--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,11 @@
 <div class="container">
-  <div class="top">
-    <img src="https://cutewallpaper.org/21/wallpaper-4k-car/Mercedes-4k-Car-Wallpaper-Car-wallpapers.jpg"
-         style="height: 500px; width: auto">
-  </div>
+    <div class="main-text">
+        <h1><span class="blue">MOTORINI</span>, kde se svět točí okolo aut</h1>
+        <p>Něco sem napiš lmao Něco sem napiš lmao Něco sem napiš lmao Něco sem napiš lmao</p>
+    </div>
+    <div class="image">
+        <img src="../../assets/6211987.jpg" style="height: 500px; width: auto">
+    </div>
 </div>
 
 <div class="line">
@@ -10,70 +13,70 @@
 </div>
 
 <body>
-<div id="divbody">
-  <div id="B">
-    <h3>Nejnovější články</h3>
-  </div>
-  <div id="C">
-    <h3>Oblíbené</h3>
-    <li><a href="#A10">Audi a8</a></li>
-    <li><a href="#Aa1">Bmw</a></li>
-    <li><a href="#Ab1">Mercedes</a></li>
-    <li><a href="#Ac1">Emise</a></li>
-    <li><a href="#Ad1">Pneumatiky</a></li>
-    <li><a href="#Ae1">Motory</a></li>
-    <li><a href="#A33">Peugeot</a></li>
-    <li><a href="#A31">Audi TT</a></li>
-    <li><a href="#D">New Updates</a></li>
-  </div>
-  <div class="container">
-    <div class="item left">
-      <h1 id="D">Nová audi A8</h1>
-      <p></p>
-    </div>
-    <div class="item">
-      <h1 id="A31">NEWS</h1>
-      <p></p>
-    </div>
+    <div id="divbody">
+        <div id="B">
+            <h3>Nejnovější články</h3>
+        </div>
+        <div id="C">
+            <h3>Oblíbené</h3>
+            <li><a href="#A10">Audi a8</a></li>
+            <li><a href="#Aa1">Bmw</a></li>
+            <li><a href="#Ab1">Mercedes</a></li>
+            <li><a href="#Ac1">Emise</a></li>
+            <li><a href="#Ad1">Pneumatiky</a></li>
+            <li><a href="#Ae1">Motory</a></li>
+            <li><a href="#A33">Peugeot</a></li>
+            <li><a href="#A31">Audi TT</a></li>
+            <li><a href="#D">New Updates</a></li>
+        </div>
+        <div class="container">
+            <div class="item left">
+                <h1 id="D">Nová audi A8</h1>
+                <p></p>
+            </div>
+            <div class="item">
+                <h1 id="A31">NEWS</h1>
+                <p></p>
+            </div>
 
-  </div>
-  <div class="container">
-    <div class="item left">
-      <h1>Skins</h1>
-      <p></p>
-    </div>
-    <div class="item">
-      <h1>CS:GO FREE2PLAY ?!</h1>
-      <p></p>
-    </div>
+        </div>
+        <div class="container">
+            <div class="item left">
+                <h1>Skins</h1>
+                <p></p>
+            </div>
+            <div class="item">
+                <h1>CS:GO FREE2PLAY ?!</h1>
+                <p></p>
+            </div>
 
-  </div>
-  <div class="container">
-    <div class="item left">
-      <h1 id="Ab1">Overpass</h1>
-      <p>
-        <br>
-      </p>
-    </div>
-    <div class="item">
-      <h1 id="A33">s1mple</h1>
-      <p></p>
-    </div>
+        </div>
+        <div class="container">
+            <div class="item left">
+                <h1 id="Ab1">Overpass</h1>
+                <p>
+                    <br>
+                </p>
+            </div>
+            <div class="item">
+                <h1 id="A33">s1mple</h1>
+                <p></p>
+            </div>
 
-  </div>
-  <div class="container">
-    <div class="item left">
-      <h1 id="Ad1">Cache</h1>
-      <p>
+        </div>
+        <div class="container">
+            <div class="item left">
+                <h1 id="Ad1">Cache</h1>
+                <p>
 
-      </p>
-    </div>
-    <div class="item">
-      <h1 id="Aa1">Mirage</h1>
-      <p>
+                </p>
+            </div>
+            <div class="item">
+                <h1 id="Aa1">Mirage</h1>
+                <p>
 
-      </p>
+                </p>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </body>
