--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,96 +1,97 @@
 footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #87C0DA;
-  color: #F2F2D5;
-  text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #87C0DA;
+    color: #F2F2D5;
+    text-align: center;
 }
 
 footer {
-  align-items: center;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background: #87C0DA;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background: #87C0DA;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .footerLeft {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .footerRight {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
 
 .fotoLink {
-  border: solid 1px white;
-  border-radius: 4px;
-  margin-left: 5px;
+    border: solid 1px white;
+    border-radius: 4px;
+    margin-left: 5px;
 }
 
 .link {
-  margin: 5px;
+    margin: 5px;
 }
 
-*{
-  font-family: "Roboto Light";
+* {
+    font-family: "Roboto Light";
 }
 
-a{
-  text-decoration: none;
+a {
+    text-decoration: none;
 }
 
-header{
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 30px;
-  box-shadow: 0 1px 0 0 #e7e7e7;
+header {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 30px;
+    box-shadow: 0 1px 0 0 #e7e7e7;
+    background-color: #80b7ff;
 }
 
 .bottomHeader {
-  box-shadow: 0 2px 0 0 #e7e7e7;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 25px;
+    box-shadow: 0 2px 0 0 #e7e7e7;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 25px;
 }
 
 .logo {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-.navbar li{
-  display: inline-block;
-  padding: 0 8px;
+.navbar li {
+    display: inline-block;
+    padding: 0 8px;
 }
 
 .navbar li a {
-  transition: .3s;
-  color: black;
+    transition: .3s;
+    color: black;
 }
 
-.navbar li a:hover{
-  color: #87C0DA;
+.navbar li a:hover {
+    color: #87C0DA;
 }
 
-.btn-area{
-  cursor: pointer;
-  color: black;
-  font-size: 12px;
-  letter-spacing: 2px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: solid 1px black;
+.btn-area {
+    cursor: pointer;
+    color: black;
+    font-size: 12px;
+    letter-spacing: 2px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    // border: solid 1px black;
+    background-color: white;
 }
-
