--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,107 +1,132 @@
-.top {
-  display: flex;
-  margin-top: 10px;
-  justify-content: center;
-  margin-left: 70px;
+.main-text {
+    border: none;
+    h1 {
+        font-size: 4rem;
+    }
+    p {
+        text-align: center;
+    }
+    .blue {
+        color: rgb(73, 150, 254);
+    }
+}
+
+.image {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    margin-left: 70px;
 }
 
 .line {
-  border-bottom: 1px solid #e7e7e7;
-  margin: 30px;
+    border-bottom: 1px solid #e7e7e7;
+    margin: 30px;
 }
 
 body {
-  //background-image: url("https://cutewallpaper.org/21/wallpaper-4k-car/Mercedes-4k-Car-Wallpaper-Car-wallpapers.jpg");
-  background-size:cover;
-  background-position: 0%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    //background-image: url("https://cutewallpaper.org/21/wallpaper-4k-car/Mercedes-4k-Car-Wallpaper-Car-wallpapers.jpg");
+    background-size: cover;
+    background-position: 0%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 #divbody {
-  margin: 5%;
-  //background-color: rgba(255, 255, 255, 0.7);
+    margin: 5%;
+    //background-color: rgba(255, 255, 255, 0.7);
 }
+
 h1 {
-  text-align: center;
-  border: solid 1px;
-  border-color: black;
+    text-align: center;
+    border-color: black;
 }
 
 h2 {
-  text-align: center;
-  font-size: 70px;
-  margin: 1%
+    text-align: center;
+    font-size: 70px;
+    margin: 1%
 }
+
 h3 {
-  margin: 1%;
-  font-weight: 800;
+    margin: 1%;
+    font-weight: 800;
 }
 
 ul {
-  border: black;
+    border: black;
 }
 
 #A {
-  display: flex;
-  border: solid 2px;
-  border-color: black;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    border: solid 2px;
+    border-color: black;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
 ul {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
+
 #B {
-  display: flex;
-  justify-content: left;
-  font-size: medium;
+    display: flex;
+    justify-content: left;
+    font-size: medium;
 }
+
 a {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
+
 #C {
-  border-bottom: 2px solid #e7e7e7;
-
-  flex-direction: row;
-  justify-content: space-between;
-  display: flex;
-  align-items: baseline;
-  height: 60%;
-  margin: 1%;
+    border-bottom: 2px solid #e7e7e7;
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    align-items: baseline;
+    height: 60%;
+    margin: 1%;
 }
+
 div li {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  margin: 1%;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    margin: 1%;
 }
-.container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.item {
 
-  width:100%;
-  justify-content: space-between;
-  margin: 0 20px;
-  text-align: center;
+.container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
 }
+
+.item {
+    width: 100%;
+    justify-content: space-between;
+    margin: 0 20px;
+    text-align: center;
+}
+
 .item.left {
-  text-align: center;
+    text-align: center;
 }
+
 p {
-  color: black ;
-  font-weight: 600;
+    color: black;
+    font-weight: 600;
 }
+
 li {
-  font-weight: 500;
+    font-weight: 500;
 }
+
 @media screen and (max-width: 800px) {
-  .container {
-    flex-direction: column;
-  }
+    .container {
+        flex-direction: column;
+    }
 }
