--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,7 @@ footer {
 }
 
 * {
-    font-family: "Roboto Light";
+    font-family: -apple-system;
 }
 
 a {
@@ -69,6 +69,10 @@ header {
 
 .logo {
     cursor: pointer;
+}
+
+.navbar{
+  font-size: 20px;
 }
 
 .navbar li {
