--- a/src/app/forum/forum.component.scss
+++ b/src/app/forum/forum.component.scss
@@ -8,11 +8,12 @@
 
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .item {
+  margin-top: 50px;
   border: solid 1px black;
   border-radius: 2px;
 }
