--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,22 @@
 <div class="container">
     <div class="main-text">
-        <h1><span class="blue">MOTORINI</span>, kde se svět točí okolo aut</h1>
-        <p>Něco sem napiš lmao Něco sem napiš lmao Něco sem napiš lmao Něco sem napiš lmao</p>
+        <h1><span class="blue">MOTORINI</span>, zde se svět točí okolo aut</h1>
+        <p>Stránka zaměřena nejen pro fanoušky aut, ale je i pro klasické uživatele</p>
     </div>
     <div class="image">
-        <img src="../../assets/6211987.jpg" style="height: 500px; width: auto">
+        <img src="../../assets/6211987.jpg" style="height: 700px; width: auto">
     </div>
 </div>
 
 <div class="line">
 
+</div>
+
+<div style="height: 500px" class="photoHome">
+<p style="font-size: 35px; margin-top: 90px; color: #599FFE; margin-left: 900px">ČLÁNKY FÓRUM A MNOHEM VÍC!</p>
+  <p style="font-size: 15px; color: #599FFE; margin-left: 900px">Tato webová stránka je maturitní projekt a zabýva se vším kolem aut.<br> Naleznete zde vše od článku <br>
+    po ověření VIN kódu vašeho auta
+  </p>
 </div>
 
 <body>
@@ -19,64 +26,21 @@
         </div>
         <div id="C">
             <h3>Oblíbené</h3>
-            <li><a href="#A10">Audi a8</a></li>
-            <li><a href="#Aa1">Bmw</a></li>
-            <li><a href="#Ab1">Mercedes</a></li>
-            <li><a href="#Ac1">Emise</a></li>
-            <li><a href="#Ad1">Pneumatiky</a></li>
-            <li><a href="#Ae1">Motory</a></li>
-            <li><a href="#A33">Peugeot</a></li>
-            <li><a href="#A31">Audi TT</a></li>
-            <li><a href="#D">New Updates</a></li>
-        </div>
-        <div class="container">
-            <div class="item left">
-                <h1 id="D">Nová audi A8</h1>
-                <p></p>
-            </div>
-            <div class="item">
-                <h1 id="A31">NEWS</h1>
-                <p></p>
-            </div>
+
+            <li *ngFor="let clanek of clanky"><a href="#A10">{{ clanek.Nadpis }}</a></li>
 
         </div>
-        <div class="container">
-            <div class="item left">
-                <h1>Skins</h1>
-                <p></p>
-            </div>
-            <div class="item">
-                <h1>CS:GO FREE2PLAY ?!</h1>
-                <p></p>
-            </div>
 
+      <div   class="clanekContainer" style="border-bottom: 2px solid #e7e7e7;" *ngFor="let clanek of clanky">
+        <div class="nadpisClanku">
+          {{ clanek.Nadpis }}
         </div>
-        <div class="container">
-            <div class="item left">
-                <h1 id="Ab1">Overpass</h1>
-                <p>
-                    <br>
-                </p>
-            </div>
-            <div class="item">
-                <h1 id="A33">s1mple</h1>
-                <p></p>
-            </div>
-
+        <div class="obsahClanku">
+          {{ clanek.Obsah }}
         </div>
-        <div class="container">
-            <div class="item left">
-                <h1 id="Ad1">Cache</h1>
-                <p>
+      </div>
 
-                </p>
-            </div>
-            <div class="item">
-                <h1 id="Aa1">Mirage</h1>
-                <p>
 
-                </p>
-            </div>
-        </div>
+
     </div>
 </body>
