--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div class="container">
+  <div class="main-text">
+    <h1><span class="blue">Stefan Rajilić</span>-tvůrce této webové stránky</h1>
+    <p>Rozhodl jsem se pro tento projekt, jelikož auta miluji už od dětství a žádný takovýto web jsem nikdy neviděl. Momentálně jsem ve věku, kdy se rozhlížím po svém první autě a bylo by velice užitečné, kdyby byla nějaká stránka, kde by bylo vše od toho, kde hledat auto ke koupi až po to jaký motor je spolehlivý a jakému se spíše vyhnout.
+    </p>
+  </div>
+  <div class="image">
+    <img src="../../assets/6211987.jpg" style="height: 700px; width: auto">
+  </div>
+</div>
+
+<div class="line">
+
+</div>
