--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     <ul class="navbar">
       <li><a style="color: #4C98FE; font-size: large" href="home">MOTORINI</a></li>
       <li><a href="forum">Forum</a></li>
-      <li><a href="clanky">Clanky</a></li>
+      <li><a href="clanky">Články</a></li>
       <li><a href="api">Ověřit</a></li>
       <li><a href="about">O nás</a></li>
     </ul>
@@ -42,7 +42,6 @@
 <router-outlet>
 
 </router-outlet>
-
 
 <footer>
 
