--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -5,27 +5,26 @@
   <div class="item" *ngFor="let otazka of otazky">
     <div>
       <h2 style="margin: 5px">{{ otazka.nadpis }}</h2>
-      <p style="margin: 5px">{{ otazka.id }}</p>
     </div>
     <div class="obsah">
       {{ otazka.obsah }}
     </div>
 
-    <div class="komentare">
+    <div class="komentare" style="margin: 15px">
 
 
-      <div class="item" *ngFor="let komentar of otazka.komentare">>
-        <p class="komentar">{{ komentar.obsah }} </p>
+      <div class="item" *ngFor="let komentar of otazka.komentare">
+        <p class="komentar" style="width: 150px">{{ komentar.obsah }} </p>
       </div>
 
     </div>
 
     <p><br></p>
 
-    <div class="comments">
+    <div class="comments" style="margin: 20px">
       <form (ngSubmit)="(komentar.value)" class="komentForm">
         <input type="text" #komentar placeholder="Komentar" name="komentar" id="komentar" required>
-        <button  (click)="pridatKomentar(komentar.value, otazka.id)" type="submit" class="postComment">Vložit komentář</button>
+        <button  style="background-color: #4C98FE" (click)="pridatKomentar(komentar.value, otazka.id)" type="submit" class="postComment">Vložit komentář</button>
       </form>
     </div>
 
