--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -17,8 +17,7 @@
     <input  type="password" #passwordSingup2 placeholder="Potvrdit heslo" name="psw-repeat" id="psw-repeat" required>
     <hr>
 
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-    <button  type="submit" class="registerbtn">Založit účet</button>
+    <button  style="background-color: #4C98FE" type="submit" class="registerbtn">Založit účet</button>
   </div>
 
   <div class="container signin">
