--- a/src/app/vytvoreniTematu/vytvoreni-tematu.component.html
+++ b/src/app/vytvoreniTematu/vytvoreni-tematu.component.html
@@ -7,7 +7,7 @@
     <label for="subject">Váš dotaz</label>
     <textarea #obsah id="subject" name="subject" placeholder="Text .." style="height:200px"></textarea>
 
-    <input type="submit" value="Vytvořit téma">
+    <input style="background-color: #4C98FE" type="submit" value="Vytvořit téma">
 
   </form>
 </div>
