--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -27,7 +27,7 @@ hr {
 }
 
 /* Set a style for the submit/register button */
-.registerbtn {
+.loginbtn {
   background-color: #04AA6D;
   color: white;
   padding: 16px 20px;
@@ -36,9 +36,10 @@ hr {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
+  background-color: #4C98FE;
 }
 
-.registerbtn:hover {
+.loginbtn:hover {
   opacity:1;
 }
 
